external-crates/move/crates/move-compiler/tests/myso_mode/one_time_witness/init_many_wrong_parameters.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: myso
  edition: legacy
  lint: false
---
error[MySo E02003]: invalid 'init' function
  ┌─ tests/myso_mode/one_time_witness/init_many_wrong_parameters.move:2:9
  │
2 │     fun init(_: who::X, _: who::Y, _: who::Z) {}
  │         ^^^^                       - 'init' functions can have at most two parameters
  │         │                           
  │         Invalid 'init' function declaration

error[E03002]: unbound module
  ┌─ tests/myso_mode/one_time_witness/init_many_wrong_parameters.move:2:17
  │
2 │     fun init(_: who::X, _: who::Y, _: who::Z) {}
  │                 ^^^ Unbound module alias 'who'

error[E03002]: unbound module
  ┌─ tests/myso_mode/one_time_witness/init_many_wrong_parameters.move:2:28
  │
2 │     fun init(_: who::X, _: who::Y, _: who::Z) {}
  │                            ^^^ Unbound module alias 'who'

error[E03002]: unbound module
  ┌─ tests/myso_mode/one_time_witness/init_many_wrong_parameters.move:2:39
  │
2 │     fun init(_: who::X, _: who::Y, _: who::Z) {}
  │                                       ^^^ Unbound module alias 'who'

error[MySo E02003]: invalid 'init' function
  ┌─ tests/myso_mode/one_time_witness/init_many_wrong_parameters.move:8:9
  │
8 │     fun init(_: Who, _: u64, _: &mut myso::tx_context::TxContext) {}
  │         ^^^^                 - 'init' functions can have at most two parameters
  │         │                     
  │         Invalid 'init' function declaration

error[E03004]: unbound type
  ┌─ tests/myso_mode/one_time_witness/init_many_wrong_parameters.move:8:17
  │
8 │     fun init(_: Who, _: u64, _: &mut myso::tx_context::TxContext) {}
  │                 ^^^ Unbound type 'Who' in current scope
